--- a/drnet-backend/frontend/fine.html
+++ b/drnet-backend/frontend/fine.html
@@ -755,7 +755,7 @@
         <h4 class="font-semibold text-lg">Gift Hamilton</h4>
         <p onclick="openTeamModal('gift')"
           class="bg-indigo-600 text-white font-bold text-sm inline-block px-3 py-1 rounded-full cursor-pointer hover:bg-indigo-500 transition">
-          Field Technician – Click to View
+          Fiber Splicer – Click to View
         </p>
       </div>
       <div class="transform hover:scale-105 transition duration-300">
