--- a/drnet-backend/frontend/fine.html
+++ b/drnet-backend/frontend/fine.html
@@ -737,7 +737,7 @@
         <h4 class="font-semibold text-lg">Joseph Martin</h4>
         <p onclick="openTeamModal('joseph')"
           class="bg-indigo-600 text-white font-bold text-sm inline-block px-3 py-1 rounded-full cursor-pointer hover:bg-indigo-500 transition">
-          Lead Technician – Click to View
+          Technical Team Leader – Click to View
         </p>
       </div>
       <div class="transform hover:scale-105 transition duration-300">
