--- a/drnet-backend/frontend/fine.html
+++ b/drnet-backend/frontend/fine.html
@@ -746,7 +746,7 @@
         <h4 class="font-semibold text-lg">Alex Baraka</h4>
         <p onclick="openTeamModal('alex')"
           class="bg-indigo-600 text-white font-bold text-sm inline-block px-3 py-1 rounded-full cursor-pointer hover:bg-indigo-500 transition">
-          Aerial OPtic Technician – Click to View
+          Aerial Optic Technician – Click to View
         </p>
       </div>
       <div class="transform hover:scale-105 transition duration-300">
