--- a/drnet-backend/frontend/fine.html
+++ b/drnet-backend/frontend/fine.html
@@ -805,7 +805,7 @@
       name: "Julius Ojwang",
       title: "Software Engineer",
       img: "images/4.jpg",
-      bio: "Julius is a Fullstack Developer & Software Engineer specializing in wireless networks, Fiber Optics, Mikrotik systems, and customer support solutions.",
+      bio: "Julius is a Fullstack Developer and Software Engineer with a strong focus on wireless networks, Fiber Optics, and MikroTik systems. He builds scalable web applications and custom solutions for ISPs, integrating tools like M-Pesa, user dashboards, and session control APIs. With solid backend and frontend skills, Julius also specializes in setting up reliable network infrastructure and enhancing customer support systems.",
     },
     joseph: {
       name: "Joseph Martin",
